fix text stroke issue and fix zoom on firefox

--- a/css/style1.css
+++ b/css/style1.css
@@ -224,6 +224,11 @@ nav ul li ul li {
   white-space: nowrap;
 }
 
+@-moz-document url-prefix() {
+  .intro .date.weekend {
+    text-shadow: -1px -1px 0 #717475, 1px -1px 0 #717475, -1px 1px 0 #717475, 1px 1px 0 #717475;
+  }
+}
 .intro {
   width: 350px;
   padding-top: 7px;
@@ -254,7 +259,7 @@ nav ul li ul li {
 }
 .intro .date.weekend {
   color: #FCF7E8;
-  text-shadow: -1px -1px 0 #717475, 1px -1px 0 #717475, -1px 1px 0 #717475, 1px 1px 0 #717475;
+  -webkit-text-stroke: 1px #717475;
 }
 .intro h4 {
   clear: both;
