--- a/css/style3.css
+++ b/css/style3.css
@@ -224,6 +224,11 @@ nav ul li ul li {
   white-space: nowrap;
 }
 
+@-moz-document url-prefix() {
+  .intro .date.weekend {
+    text-shadow: -1px -1px 0 #402E33, 1px -1px 0 #402E33, -1px 1px 0 #402E33, 1px 1px 0 #402E33;
+  }
+}
 .intro {
   width: 350px;
   padding-top: 7px;
@@ -254,7 +259,7 @@ nav ul li ul li {
 }
 .intro .date.weekend {
   color: #F7F0DD;
-  text-shadow: -1px -1px 0 #402E33, 1px -1px 0 #402E33, -1px 1px 0 #402E33, 1px 1px 0 #402E33;
+  -webkit-text-stroke: 1px #402E33;
 }
 .intro h4 {
   clear: both;
